--- a/styles/Bio.module.css
+++ b/styles/Bio.module.css
@@ -5,6 +5,7 @@
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     justify-content: center;
     flex-wrap: wrap;
+    break-inside: avoid;
 }
 
 .profile {
