--- a/styles/Bio.module.css
+++ b/styles/Bio.module.css
@@ -1,7 +1,7 @@
 .sidebarBio {
     display: flex;
     padding: 30px;
-    background: #FFFFFF;
+    background: rgba(255, 255, 255, 0.8);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     justify-content: center;
     flex-wrap: wrap;
